# Labs3sem

./: .gitignore  CMakeLists.txt  README.md
lab1/: CMakeLists.txt  c_right_lines.cpp  c_right_lines.h  c_straight_lines.cpp  c_straight_lines.h  cpp_right_lines.cpp  cpp_right_lines.h  main.cpp
lab1/straight_lines/: CMakeLists.txt  c_straight_lines.h  cpp_straight_lines.cpp  main.cpp
lab1/straight_lines_test/: CMakeLists.txt  straight_lines_test.cpp
lab2/: CMakeLists.txt  main.cpp  set_unical_integer.cpp  set_unical_integer.h
lab3/: CMakeLists.txt  list.h  main.cpp  shared_ptr.h  unique_ptr.h  vector.h
lab4/: CMakeLists.txt  functions.h  main.cpp
